--- a/style.scss
+++ b/style.scss
@@ -5,8 +5,8 @@
 // IMPORTS
 //
 
-@import "reset";
-@import "variables";
+@import 'reset';
+@import 'variables';
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -14,127 +14,152 @@
 /**************/
 
 html {
-  font-size: 100%;
+    font-size: 100%;
+}
+
+/* latin */
+@font-face {
+    font-family: 'Merriweather';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Merriweather Regular'), local('Merriweather-Regular'),
+        url('/Merriweather.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+        U+2215, U+FEFF, U+FFFD;
 }
 
 body {
-	background: $white;
-  font: 18px/1.4 $helvetica;
-  color: $darkGray;
+    background: var(--backgroundColor);
+    font: 18px/1.4 var(--paragraphFont);
+    color: var(--textColor);
 }
 
 .container {
-  margin: 0 auto;
-  max-width: 740px;
-  padding: 0 10px;
-  width: 100%;
+    margin: 0 auto;
+    max-width: 740px;
+    padding: 0 10px;
+    width: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
-  color: $darkerGray;
-  font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--paragraphFont);
+    color: var(--titleColor);
+    font-weight: bold;
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
-  padding: 0;
+    line-height: 1.7;
+    margin: 1em 0 15px;
+    padding: 0;
 
-  @include mobile {
-    line-height: 1.4;
-  }
+    @include mobile {
+        line-height: 1.4;
+    }
 }
 
 h1 {
-  font-size: 30px;
-  a {
-    color: inherit;
-  }
+    font-size: 30px;
+    a {
+        color: inherit;
+    }
 }
 
 h2 {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 h3 {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 h4 {
-  font-size: 18px;
-  color: $gray;
+    font-size: 18px;
+    color: var(--subtextColor);
 }
 
 p {
-  margin: 15px 0;
+    margin: 15px 0;
 }
 
 a {
-  color: $blue;
-  text-decoration: none;
-	cursor: pointer;
-  &:hover, &:active {
-    color: $blue;
-  }
+    color: var(--linkColor);
+    text-decoration: none;
+    cursor: pointer;
+    &:hover,
+    &:active {
+        color: var(--linkColor);
+    }
 }
 
-ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+ul,
+ol {
+    margin: 15px 0;
+    padding-left: 30px;
 }
 
 ul {
-  list-style-type: disc;
+    list-style-type: disc;
 }
 
 ol {
-  list-style-type: decimal;
+    list-style-type: decimal;
 }
 
-ol ul, ul ol, ul ul, ol ol {
-  margin: 0;
+ol ul,
+ul ol,
+ul ul,
+ol ol {
+    margin: 0;
 }
 
-ul ul, ol ul {
-  list-style-type: circle;
+ul ul,
+ol ul {
+    list-style-type: circle;
 }
 
-em, i {
-  font-style: italic;
+em,
+i {
+    font-style: italic;
 }
 
-strong, b {
-  font-weight: bold;
+strong,
+b {
+    font-weight: bold;
 }
 
 img {
-  max-width: 100%;
+    max-width: 100%;
 }
 
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
-  max-width: none;
+    max-width: none;
 }
 
 .date {
-  font-style: italic;
-  color: $gray;
+    font-style: italic;
+    color: var(--subtextColor);
 }
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
-  background: $lightGray;
+    color: var(--black);
+    background: var(--lightGray);
 }
 ::selection {
-  color: $black;
-  background: $lightGray;
+    color: var(--black);
+    background: var(--lightGray);
 }
 
 // Nicolas Gallagher's micro clearfix hack
 // http://nicolasgallagher.com/micro-clearfix-hack/
 .clearfix:before,
 .clearfix:after {
-    content: " ";
+    content: ' ';
     display: table;
 }
 
@@ -151,90 +176,90 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .masthead {
-  padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
+    padding: 20px 0;
+    border-bottom: 1px solid var(--lightGray);
 
-  @include mobile {
-    text-align: center;
-  }
+    @include mobile {
+        text-align: center;
+    }
 }
 
 .site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
+    float: left;
+    width: 70px;
+    height: 70px;
+    margin-right: 15px;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+    @include mobile {
+        float: none;
+        display: block;
+        margin: 0 auto;
+    }
 
-  img {
-    border-radius: 5px;
-  }
+    img {
+        border-radius: 5px;
+    }
 }
 
 .site-info {
-  float: left;
+    float: left;
 
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
+    @include mobile {
+        float: none;
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 .site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+    margin: 0;
+    color: var(--textColor);
+    cursor: pointer;
+    font-family: var(--paragraphFont);
+    font-weight: 300;
+    font-size: 28px;
+    letter-spacing: 1px;
 }
 
 .site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
+    margin: -5px 0 0 0;
+    color: var(--subtextColor);
+    font-size: 16px;
 
-  @include mobile {
-    margin: 3px 0;
-  }
+    @include mobile {
+        margin: 3px 0;
+    }
 }
 
 nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
-
-  a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+    float: right;
+    margin-top: 23px; // @TODO: Vertically middle align
+    font-family: var(--paragraphFont);
+    font-size: 18px;
 
     @include mobile {
-      margin: 0 10px;
-      color: $blue;
+        float: none;
+        margin-top: 9px;
+        display: block;
+        font-size: 16px;
     }
-  }
+
+    a {
+        margin-left: 20px;
+        color: var(--textColor);
+        text-align: right;
+        font-weight: 300;
+        letter-spacing: 1px;
+
+        @include mobile {
+            margin: 0 10px;
+            color: var(--linkColor);
+        }
+    }
 }
 
 //
@@ -242,48 +267,100 @@ nav {
 //
 
 .posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
+    padding-bottom: 2em;
+    border-bottom: 1px solid var(--lightGray);
 }
 
 .posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
+    padding-bottom: 1em;
+    border-bottom: none;
 }
 
 .post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
+    blockquote {
+        margin: 1.8em 0.8em;
+        border-left: 2px solid var(--subtextColor);
+        padding: 0.1em 1em;
+        color: var(--subtextColor);
+        font-size: 22px;
+        font-style: italic;
+    }
 
-  .comments {
-    margin-top: 10px;
-  }
+    .comments {
+        margin-top: 10px;
+    }
 
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
+    .read-more {
+        text-transform: uppercase;
+        font-size: 15px;
+    }
 }
 
 .wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
+    margin-top: 50px;
+    background-color: var(--footerColor);
 }
 
+.lightmode-container {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+.lightmode-container button {
+    background: transparent;
+    border: none;
+    font-size: 2em;
+}
 footer {
-  padding: 20px 0;
-  text-align: center;
+    padding: 20px 0;
+    text-align: center;
+}
+
+pre {
+    scrollbar-width: thin;
+}
+
+pre::-webkit-scrollbar-track {
+    border-radius: 20px;
+    background-color: transparent;
+}
+
+pre::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+    background-color: transparent;
+}
+
+pre::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: transparent;
+}
+
+pre:hover::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #555;
+}
+
+code.highlighter-rouge {
+    background: #333;
+    padding: 2px;
+    border-radius: 2px;
+}
+
+html.light {
+    pre:hover::-webkit-scrollbar-thumb {
+        border-radius: 20px;
+        background-color: #999;
+    }
+    code.highlighter-rouge {
+        background: #eee;
+        padding: 2px;
+        border-radius: 2px;
+    }
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
-@import "highlights";
-@import "svg-icons";
+@import 'highlights';
+@import 'svg-icons';
