Remove all extra plugins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 
                     <nav>
                         <a href="{{ site.baseurl }}/">Blog</a>
-                        <a href="https://omaralshaker.com">About</a>
+                        <a href="https://omaralshaker.com/about">About</a>
                     </nav>
                 </header>
             </div>
