--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,7 @@ html {
     font-size: 100%;
 }
 
+
 /* latin */
 @font-face {
     font-family: 'Merriweather';
@@ -348,6 +349,19 @@ code.highlighter-rouge {
     border-radius: 2px;
 }
 
+.type-badge {
+  padding: 5px;
+  border-radius: 2px;
+  background: var(--linkColor);
+  margin-right: 5px;
+  color: #333;
+  text-transform: uppercase;
+  font-size: 0.5em;
+  display: inline-block;
+  vertical-align: text-bottom;
+  opacity: 0.3;
+}
+
 html.light {
     pre:hover::-webkit-scrollbar-thumb {
         border-radius: 20px;
@@ -358,7 +372,12 @@ html.light {
         padding: 2px;
         border-radius: 2px;
     }
+    .type-badge {
+      background: var(--linkColor);
+      color: #fff;
+    }
 }
+
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
