--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,45 +7,75 @@
         />
         <meta
             name="keywords"
-            content="Blog, tech blog, opionions, Web development, React, UI design, PHP, JavaScript, HTML5"
+            content="Blog, tech blog, opinions, Web development, React, UI design, PHP, JavaScript, HTML5"
         />
         <meta name="author" content="Omar Alshaker" />
         <meta name="copyright" content="© Copyright 2019 - Omar Alshaker" />
         <meta name="robots" content="index, follow" />
         <meta name="location" content="Warsaw, Poland" />
-        <meta
-            property="og:image"
-            content="{{ site.baseurl }}/images/opengraph-image.jpg"
-        />
+
         <meta property="og:url" content="https://blog.omaralshaker.com/" />
-        <meta property="og:title" content="Omar Alshaker - Blog" />
+        <meta
+            property="og:title"
+            content="{{ page.title | default: 'Omar Alshaker - Blog' }}"
+        />
         <meta property="og:site-name" content="Omar Alshaker" />
         <meta
             name="description"
-            content="My mostly but not fully tech blog"
+            content="{{
+                page.description | default: 'My mostly but not fully tech blog'
+            }}"
         />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@alshakero" />
         <meta name="twitter:creator" content="@alshakero" />
-        <meta name="twitter:title" content="Omar Alshaker - Blog" />
+        <meta
+            name="twitter:title"
+            content="{{ page.title | default: 'Omar Alshaker - Blog' }}"
+        />
         <meta
             name="twitter:description"
-            content="My mostly but not fully tech blog"
+            content="{{
+                page.description | default: 'My mostly but not fully tech blog'
+            }}"
         />
-        <meta
-            name="twitter:image:src"
-            content="https://omaralshaker.com/opengraph/thumb.jpg"
-        />
+
         <meta itemprop="name" content="Omar Alshaker" />
         <meta
             itemprop="description"
-            content="My mostly but not fully tech blog"
+            content="{{
+                page.description | default: 'My mostly but not fully tech blog'
+            }}"
         />
+
+        {% if page.opengraphImage != nil %}
+        <meta
+            itemprop="image"
+            content="{{ site.baseurl }}{{ page.opengraphImage }}"
+        />
+        <meta
+            name="twitter:image:src"
+            content="{{ site.baseurl }}{{ page.opengraphImage }}"
+        />
+        <meta
+            property="og:image"
+            content="{{ site.baseurl }}{{ page.opengraphImage }}"
+        />
+        {% elsif page.opengraphImage == nil %}
         <meta
             itemprop="image"
             content="{{ site.baseurl }}/images/opengraph-image.jpg"
         />
-        
+        <meta
+            name="twitter:image:src"
+            content="{{ site.baseurl }}/images/opengraph-image.jpg"
+        />
+        <meta
+            property="og:image"
+            content="{{ site.baseurl }}/images/opengraph-image.jpg"
+        />
+        {% else %} {% endif %}
+
         <title>
             {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} –
             {{ site.description }}
