Fix canonical URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <meta name="robots" content="index, follow" />
         <meta name="location" content="Warsaw, Poland" />
 
-        <meta property="og:url" content="https://blog.omaralshaker.com/" />
+        <meta property="og:url" content="{{site.url}}{{site.baseurl}}/{{ page.slug }}" />
         <meta
             property="og:title"
             content="{{ page.title | default: 'Omar Alshaker - Blog' }}"
