--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,12 @@
                 page.description | default: 'My mostly but not fully tech blog'
             }}"
         />
+        <meta
+            name="og:description"
+            content="{{
+                page.description | default: 'My mostly but not fully tech blog'
+            }}"
+        />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@alshakero" />
         <meta name="twitter:creator" content="@alshakero" />
