Add Svelte review

--- a/style.scss
+++ b/style.scss
@@ -67,6 +67,7 @@ h1 {
     a {
         color: inherit;
     }
+    margin: 0;
 }
 
 h2 {
@@ -177,7 +178,7 @@ img {
 //
 
 .wrapper-masthead {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .masthead {
