--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -35,6 +35,7 @@
         page.subtitle | default: 'My mostly but not fully tech blog'
     }}"
 />
+
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@alshakero" />
 <meta name="twitter:creator" content="@alshakero" />
@@ -60,7 +61,7 @@
 {% if page.opengraphImage != nil %}
 <meta itemprop="image" content="{{ site.baseurl }}{{ page.opengraphImage }}" />
 <meta
-    name="twitter:image:src"
+    name="twitter:image"
     content="{{ site.baseurl }}{{ page.opengraphImage }}"
 />
 <meta
@@ -73,7 +74,7 @@
     content="{{ site.baseurl }}/images/opengraph-image.jpg"
 />
 <meta
-    name="twitter:image:src"
+    name="twitter:image"
     content="{{ site.baseurl }}/images/opengraph-image.jpg"
 />
 <meta
