--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -16,7 +16,7 @@
 
 <meta
     property="og:url"
-    content="{{ site.url }}{{ site.baseurl }}/{{ page.slug }}"
+    content="{{ site.baseurl }}/{{ page.slug }}"
 />
 <meta
     property="og:title"
